--- a/family.html
+++ b/family.html
@@ -27,7 +27,7 @@
 			border-radius: 1em;
 			text-align: center;
 			padding: 1em;
-			height: 349px;
+			height: 409px;
 		}
 
 		.card:hover {
@@ -141,7 +141,7 @@
 				<div class="card">
 					<img src="img/art.jpg" class="card-img-top" alt="My image" />
 					<div class="card-body">
-						<h5 class="card-title">Парень с шилом в ...</h5>
+						<h5 class="card-title">Неугомонный</h5>
 						<p class="card-text">
 							ещё один, самый спокойный парниша
 						</p>
